--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "dependencies": {
     "electron-context-menu": "^3.1.2",
-    "electron-is-dev": "^2.0.0"
+    "electron-is-dev": "^2.0.0",
+    "i18next-resources-to-backend": "^1.0.0"
   },
   "devDependencies": {
     "@alephium/sdk": "0.0.5",
@@ -67,6 +68,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^1.1.4",
     "framer-motion": "^4.1.17",
+    "i18next": "^21.8.10",
     "lodash": "^4.17.21",
     "lucide-react": "^0.16.0",
     "prettier": "^2.4.1",
@@ -75,6 +77,7 @@
     "react-confetti": "^6.0.1",
     "react-detect-click-outside": "^1.1.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.17.2",
     "react-is": "^17.0.2",
     "react-qr-code": "^2.0.3",
     "react-router-dom": "^6.3.0",
